# cadastral

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 97ab4d8d9dca_create_requests_table.py
app/: main.py
app/core/: __init__.py  config.py  db.py  logging.py
app/external_simulator/: Dockerfile  main.py
app/query_service/: Dockerfile  __init__.py  dependencies.py  entrypoint.sh  models.py  repositories.py  routers.py  schemas.py  services.py  utils.py
tests/: conftest.py
tests/tests_query_service/: test_repositories.py  test_routers.py  test_schemas.py  test_services.py  test_utils.py
